Fix button text's vertical alignment in WebView

--- a/src/assets/css/button.styl
+++ b/src/assets/css/button.styl
@@ -71,9 +71,10 @@
 
     span {
         display: inline-block;
-        height: calc(var(--bx-button-height) - 2px);
+        height: var(--bx-button-height);
         line-height: var(--bx-button-height);
         vertical-align: middle;
+        vertical-align: -webkit-baseline-middle;
         color: #fff;
         overflow: hidden;
         white-space: nowrap;
